fixing some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -130,21 +130,21 @@
   }
   .homepage_title{
     margin-top: 325px;
-    margin-right: 100px;
-    float: right;
+    margin-right: 50px;
+    margin-left: 300px;
     font-size: 110px;
     color: white;
   }
   .homepage_sub_title{
-    float: right;
-    margin-right: 80px;
-    margin-left: 300px;
+    margin-top: 120px;
+    margin-right: 100px;
+    margin-left: 350px;
     color: white;
   }
   .about_page{
     background-image: url("../images/gray-laptop-computer-showing-html-codes-in-shallow-focus-160107.jpg");
     background-repeat:no-repeat;
-    background-size: initial;
+    background-size: cover;
   }
   .black_text{
     color: black;
@@ -155,7 +155,7 @@
   .contact_page{
     background-image: url("../images/white-android-smartphone-near-grey-laptop-computer-48606.jpg");
     background-repeat: no-repeat;
-    background-size: initial;
+    background-size: cover;
   }
  .ul_space{
    margin-left: 50px;
@@ -203,6 +203,7 @@
   margin-left: 100px;
   margin-bottom: 30px;
   text-align: center;
+  font-size: 50px;
 }
 .spiegelenTitle{
   margin-top: 70px;
@@ -217,6 +218,7 @@
   margin-top: 30px;
   margin-right: 150px;
   float: right;
+  font-size: 50px;
 }
 .tictactoeTitle{
 margin-top: 50px;
@@ -225,6 +227,7 @@ margin-top: 50px;
   float: right;
   margin-right: 100px;
   margin-top: 30px;
+  font-size: 50px;
 }
 .tictactoeImg{
   margin-left: 100px;
@@ -238,6 +241,7 @@ margin-top: 50px;
 float: right;
 margin-right: 150px;
 margin-top: 50px;
+font-size: 50px;
 }
 .hangmanImage{
   margin-left: 100px;
@@ -251,6 +255,7 @@ margin-top: 50px;
 float: right;
 margin-right: 50px;
 margin-top: 50px;
+font-size: 50px;
 }
 .angrybirdsImg{
 width: auto;
